hphp/test/quick/priv2.php.expectf

Fatal error: Call to private method D::foo from context C in %s on line 8
